--- a/src/app/components/temperature-kelvin/temperature-kelvin.component.html
+++ b/src/app/components/temperature-kelvin/temperature-kelvin.component.html
@@ -1,1 +1,6 @@
-<h1>temperatura kelvin</h1>
+<div>
+    <h2>Kelvin</h2>
+</div>
+<input type="number" [(ngModel)]="value" (ngModelChange)="valueChanged()">
+<span> K</span>
+
