--- a/src/app/components/temperature-fahrenheit/temperature-fahrenheit.component.html
+++ b/src/app/components/temperature-fahrenheit/temperature-fahrenheit.component.html
@@ -1,2 +1,5 @@
-<h1> temperatura fahrenheit</h1>
-
+<div>
+    <h2>fahrenheit</h2>
+</div>
+<input type="number" [(ngModel)]="value" (ngModelChange)="valueChanged()">
+<span> °F</span>
